Set m_graphicsLayer as fixed position container

This changes the fixed position container set by CompositedLayerMapping
from childForSuperlayers() to m_graphicsLayer. When childForSuperlayers()
is different from m_graphicsLayer, setting the fixed position container
to childForSuperlayers() means that the contained fixed position layers
incorrectly ignore changes to m_graphicsLayer's transform that happen
on the compositor thread (since they're fixed to m_graphicsLayer's parent
rather than to m_graphicsLayer itself).

BUG=686748
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2683433002
Cr-Commit-Position: refs/heads/master@{#449448}

Former-commit-id: d290cbee660c449245346abe4a9f2c7948df4c9e